# rules-poc

./: .gitignore  LICENSE  README.md  Reproducibility.md  pyproject.toml
examples/banking/: constraints.cypher  load.cypher  postconditions.cypher  program.gqlr
examples/closure_scale/: constraints.cypher  program.gqlr
examples/compliance/: constraints.cypher  load.cypher  postconditions.cypher  program.gqlr
examples/family/: constraints.cypher  load.cypher  postconditions.cypher  program.gqlr
examples/minimal/: invalid_missing_head.gqlr  invalid_missing_mode.gqlr  program.gqlr
examples/mode_robustness/: load.cypher  program_ignore.gqlr  program_log.gqlr  program_strict.gqlr
scripts/: run_evaluation.py  run_large_scale_e5.py
src/gqlrules/: __init__.py  cli.py  compiler.py  demo.py  metrics.py  model.py  parser.py  runner.py  util.py
tests/: test_compiler.py  test_demo.py  test_examples_parse.py  test_integration_cli_run.py  test_integration_neo4j.py  test_metrics.py  test_parser.py  test_runner.py  test_util.py
